# danggu

./: .env.example  .gitignore  pyproject.toml  requirements.txt
api/: index.py
src/: config.py  main.py  templates_setup.py
src/api/: deps.py
src/api/v1/: router.py
src/api/v1/endpoints/: customer.py  danggn.py  menu.py
src/api/v1/endpoints/admin/: __init__.py  _constants.py  applications.py  auth.py  management.py
src/core/: brute_force.py  csrf.py  media.py  paths.py  redis_client.py  repository.py  session.py  supabase_client.py
src/domain/admin/: admin_user_repository.py  admin_user_service.py  register_key_repository.py  repository.py  service.py
src/domain/customer/: repository.py  schemas.py  service.py
src/domain/danggn/: auth_code_repository.py  commission_repository.py  event_log_repository.py  repository.py  review_repository.py  schemas.py  service.py  settings_repository.py  state.py
src/domain/menu/: repository.py
src/static/css/: style.css
src/static/js/: danggn-fx.js
src/templates/: index.html  menu_add_form.html  menu_delete_list.html  menu_result.html  menu_toast.html  nanumsell.html
src/templates/admin/: _shared.html  admins.html  application_detail.html  commission.html  customers.html  dashboard.html  login.html  register.html  register_keys.html  settings.html
src/templates/당근마켓/: _base.html  _macros.html  _navbar.html  apply.html  index.html  login.html  lookup.html  profile.html  register.html  review.html  reviews.html  status.html
supabase/: schema.sql
